Update font to LatinModernRoman.

--- a/SaubhikMukherjeeCV.tex
+++ b/SaubhikMukherjeeCV.tex
@@ -1,15 +1,11 @@
 %! TeX program = lualatex
 
-% The font could be set to Windows-specific Calibri by using the 'calibri' option
 \documentclass[]{mcdowellcv}
-
-% For mathematical symbols
-\usepackage{amsmath}
 
 % Set applicant's personal data for header
 \name{\href{https://www.linkedin.com/in/saubhikm/}{Saubhik Mukherjee}}
 \address{1735 Woodland Ave, Apt 62 \linebreak East Palo Alto, CA 94303}
-\contacts{(470) 313-0534 \linebreak \ULurl{saubhik@gatech.edu}}
+\contacts{Mobile: (470) 313-0534 \linebreak \ULurl{saubhik.mukherjee@gmail.com}}
 
 \begin{document}
 
@@ -18,10 +14,12 @@
 
     % Print the content
     \begin{cvsection}{Employment}
-        \begin{cvsubsection}{Senior Software
-          Engineer}{\href{https://sambanova.ai/}{SambaNova Systems, Palo
-          Alto}}{(1 year) May '22 - Present}
-            \textit{ML Compiler (Template Library)}
+
+        \begin{cvsubsection}
+          {Senior Software Engineer}
+          {\href{https://sambanova.ai/}{SambaNova Systems, Palo Alto}}
+          {May 23, 2022 - Present}
+            \textit{Machine Learning Compiler Development}
             \begin{itemize}
                 \item Developing an embedded DSL \& compiler in C++ using
                   \href{https://mlir.llvm.org/}{MLIR} for programming compute
