Update SambaNova Systems employment details.

--- a/SaubhikMukherjeeCV.tex
+++ b/SaubhikMukherjeeCV.tex
@@ -2,31 +2,57 @@
 
 \documentclass[]{mcdowellcv}
 
-% Set applicant's personal data for header
 \name{\href{https://www.linkedin.com/in/saubhikm/}{Saubhik Mukherjee}}
 \address{1735 Woodland Ave, Apt 62 \linebreak East Palo Alto, CA 94303}
 \contacts{Mobile: (470) 313-0534 \linebreak \ULurl{saubhik.mukherjee@gmail.com}}
 
 \begin{document}
-
-    % Print the header
     \makeheader
 
-    % Print the content
     \begin{cvsection}{Employment}
 
         \begin{cvsubsection}
           {Senior Software Engineer}
           {\href{https://sambanova.ai/}{SambaNova Systems, Palo Alto}}
           {May 23, 2022 - Present}
-            \textit{Machine Learning Compiler Development}
+            \textit{Machine Learning (ML) Compiler}
             \begin{itemize}
-                \item Developing an embedded DSL \& compiler in C++ using
-                  \href{https://mlir.llvm.org/}{MLIR} for programming compute
-                  \& memory units to implement ML kernels on a CGRA chip.
-                \item Compiler support \& abstraction for h/w features \& bug workarounds across different h/w generations; resource optimizations, legalization \& MLIR graph transformations in compiler passes.
-                \item \textit{Tools}: C++ (\href{https://clang.llvm.org/}{LLVM clang 11}), \href{https://mlir.llvm.org/}{LLVM's MLIR}, \href{https://cmake.org/}{cmake}, \href{https://ninja-build.org/}{ninja};
-                    remote development with \href{https://github.com/tmux/tmux}{tmux}, \href{https://www.vim.org/}{vim}, \href{https://github.com/universal-ctags/ctags}{ctags} \& \href{https://clangd.llvm.org/}{clangd} LSP.
+              \item
+                Build \href{https://mlir.llvm.org/}{MLIR} and
+                \href{https://llvm.org/}{LLVM}-based compiler layers and
+                compiler tools to transform, optimize, debug, and execute ML
+                models on proprietary ML accelerator architectures.
+              \item
+                Build scalable and high-quality production compiler
+                infrastructure using well-established and emerging techniques
+                and push the boundaries of compiler design.
+              \item
+                Develop, maintain, and debug compiler optimization algorithms
+                on ML graphs and add compiler support for new hardware
+                architectures.
+              \item
+                Analyze and improve compile-time and run-time performance
+                across multiple AI hardware architectures and ML frameworks,
+                such as \href{https://www.tensorflow.org/}{TensorFlow} and
+                \href{https://pytorch.org/}{PyTorch}, to support new
+                state-of-the-art training and inference.
+              \item
+                Collaborate with ML researchers and engineers to guide compiler
+                development for future ML trends.
+              \item
+                \textit{Tools}: \href{https://isocpp.org/}{C++},
+                (\href{https://clang.llvm.org/}{Clang}),
+                \href{https://mlir.llvm.org/}{MLIR},
+                \href{https://lldb.llvm.org/}{LLDB},
+                \href{https://cmake.org/}{cmake},
+                \href{https://ninja-build.org/}{ninja},
+                \href{https://gperftools.github.io/gperftools/cpuprofile.html}{gperf},
+                \href{https://github.com/tmux/tmux}{tmux},
+                \href{https://neovim.io/}{neovim},
+                \href{https://github.com/universal-ctags/ctags}{ctags},
+                \href{https://clangd.llvm.org/}{clangd},
+                \href{https://www.synopsys.com/verification/simulation/vcs.html}{Synopsys
+                VCS}
             \end{itemize}
         \end{cvsubsection}
 
