--- a/SaubhikMukherjeeCV.tex
+++ b/SaubhikMukherjeeCV.tex
@@ -10,53 +10,114 @@
     \makeheader
 
     \begin{cvsection}{Employment}
+      \begin{cvsubsection}
+        {Senior Software Engineer}
+        {\href{https://sambanova.ai/}{SambaNova Systems, Palo Alto}}
+        {May 23, 2022 - Present}
+          \textit{Machine Learning (ML) compiler}
+          \begin{itemize}
+            \item
+              Build \href{https://mlir.llvm.org/}{MLIR} and
+              \href{https://llvm.org/}{LLVM}-based compiler layers and
+              compiler tools to transform, optimize, debug, and execute ML
+              models on proprietary ML accelerator architectures.
+            \item
+              Build scalable and high-quality production compiler
+              infrastructure using well-established and emerging techniques
+              and push the boundaries of compiler design.
+            \item
+              Develop, maintain, and debug compiler optimization algorithms
+              on ML graphs and add compiler support for new hardware
+              architectures.
+            \item
+              Analyze and improve compile-time and run-time performance
+              across multiple AI hardware architectures and ML frameworks,
+              such as \href{https://www.tensorflow.org/}{TensorFlow} and
+              \href{https://pytorch.org/}{PyTorch}, to support new
+              state-of-the-art training and inference.
+            \item
+              Collaborate with ML researchers and engineers to guide compiler
+              development for future ML trends.
+            \item
+              \textit{Tools}: \href{https://isocpp.org/}{C++},
+              \href{https://clang.llvm.org/}{Clang},
+              \href{https://mlir.llvm.org/}{MLIR},
+              \href{https://lldb.llvm.org/}{LLDB},
+              \href{https://cmake.org/}{cmake},
+              \href{https://ninja-build.org/}{ninja},
+              \href{https://gperftools.github.io/gperftools/cpuprofile.html}{gperf},
+              \href{https://github.com/tmux/tmux}{tmux},
+              \href{https://neovim.io/}{neovim},
+              \href{https://github.com/universal-ctags/ctags}{ctags},
+              \href{https://clangd.llvm.org/}{clangd},
+              \href{https://www.synopsys.com/verification/simulation/vcs.html}{Synopsys
+              VCS}.
+          \end{itemize}
+      \end{cvsubsection}
 
+      \begin{cvsubsection}
+        {Software Engineer}
+        {\href{https://www.alpaca.markets/jp/about.html}{AlpacaJapan, Tokyo}}
+        {Jan 1, 2019 - Jan 8, 2021}
+        \textit{Machine Learning (ML) systems}
+          \begin{itemize}
+            \item
+              Design, develop, maintain, and test live production software
+              systems for delivering stock price predictions.
+            \item
+              Collaborate with data science \& engineering team to integrate
+              different software systems and deploy and upgrade ML models in
+              live production financial forecasting software.
+            \item
+              Handle installation \& maintenance of new data sources and
+              develop the data platform used for ML model R\&D.
+            \item
+              Collect and document client requirements for future releases and
+              make extensible and robust software design decisions for
+              developing server \& client web applications; responsible for
+              10\% annual revenue growth.
+            \item
+              Manage software releases with an agile mindset and develop
+              workflows for fast production recovery in case of failures.
+            \item
+              Driving innovation by evaluating new technologies, original
+              financial data sources, and recent research papers that add value
+              to Alpaca's products.
+            \item
+              \textit{Tools}: \href{https://www.python.org/}{Python},
+              \href{https://react.dev/}{React},
+              \href{https://developer.mozilla.org/en-US/docs/Web/JavaScript}{JavaScript},
+              \href{https://flask.palletsprojects.com/}{Flask},
+              \href{https://www.postgresql.org/}{PostgreSQL},
+              \href{https://www.sqlalchemy.org/}{SQLAlchemy},
+              \href{https://alembic.sqlalchemy.org/en/latest/}{Alembic},
+              \href{https://kubernetes.io/}{Kubernetes},
+              \href{https://www.docker.com/}{Docker},
+              \href{https://pytorch.org/}{PyTorch},
+              \href{https://pandas.pydata.org/}{Pandas},
+              \href{https://numpy.org/}{NumPy},
+              \href{https://scipy.org/}{SciPy},
+              \href{https://github.com/spotify/luigi}{Luigi}.
+          \end{itemize}
+      \end{cvsubsection}
+
+      \begin{cvsubsection}
+        {Data Scientist}
+        {\href{https://www.ab-inbev.com/}{Anheuser-Busch InBev, Bangalore}}
+        {Jun '17 - Dec '18}
+        \textit{Pricing Analytics}
+          \begin{itemize}
+              \item Developed pricing conjoint modelling pipelines for revenue mgmt across business units with UI dashboards.
+              \item Awarded \textit{Innovation Impact Award} among 200 new hires for developing brand/SKU optimization techniques, aggregating regional conjoint studies; lead 4 data scientists. \textit{Tools}: \href{https://www.r-project.org/about.html}{R}, \href{https://shiny.rstudio.com/}{RShiny}, \href{https://www.python.org/}{Python}, \href{https://jupyter.org/}{Jupyter}.
+          \end{itemize}
+      \end{cvsubsection}
+    \end{cvsection}
+
+    \begin{cvsection}{Internships \& Research}
         \begin{cvsubsection}
-          {Senior Software Engineer}
-          {\href{https://sambanova.ai/}{SambaNova Systems, Palo Alto}}
-          {May 23, 2022 - Present}
-            \textit{Machine Learning (ML) Compiler}
-            \begin{itemize}
-              \item
-                Build \href{https://mlir.llvm.org/}{MLIR} and
-                \href{https://llvm.org/}{LLVM}-based compiler layers and
-                compiler tools to transform, optimize, debug, and execute ML
-                models on proprietary ML accelerator architectures.
-              \item
-                Build scalable and high-quality production compiler
-                infrastructure using well-established and emerging techniques
-                and push the boundaries of compiler design.
-              \item
-                Develop, maintain, and debug compiler optimization algorithms
-                on ML graphs and add compiler support for new hardware
-                architectures.
-              \item
-                Analyze and improve compile-time and run-time performance
-                across multiple AI hardware architectures and ML frameworks,
-                such as \href{https://www.tensorflow.org/}{TensorFlow} and
-                \href{https://pytorch.org/}{PyTorch}, to support new
-                state-of-the-art training and inference.
-              \item
-                Collaborate with ML researchers and engineers to guide compiler
-                development for future ML trends.
-              \item
-                \textit{Tools}: \href{https://isocpp.org/}{C++},
-                (\href{https://clang.llvm.org/}{Clang}),
-                \href{https://mlir.llvm.org/}{MLIR},
-                \href{https://lldb.llvm.org/}{LLDB},
-                \href{https://cmake.org/}{cmake},
-                \href{https://ninja-build.org/}{ninja},
-                \href{https://gperftools.github.io/gperftools/cpuprofile.html}{gperf},
-                \href{https://github.com/tmux/tmux}{tmux},
-                \href{https://neovim.io/}{neovim},
-                \href{https://github.com/universal-ctags/ctags}{ctags},
-                \href{https://clangd.llvm.org/}{clangd},
-                \href{https://www.synopsys.com/verification/simulation/vcs.html}{Synopsys
-                VCS}
-            \end{itemize}
-        \end{cvsubsection}
-
-        \begin{cvsubsection}{Graduate Research Assistant}{\href{https://scs.gatech.edu/}{Georgia Tech, Atlanta}}{Aug '21 - May '22}
+          {Graduate Research Assistant}
+          {\href{https://scs.gatech.edu/}{Georgia Tech, Atlanta}}
+          {Aug 2021 - May 2022}
             \begin{itemize}
                 \item Ported Facebook's QUIC implementation, \href{https://github.com/facebookincubator/mvfst}{mvfst}, to rely on the efficient kernel-bypass network stack (threading \& socket) APIs provided by MIT's \href{https://www.usenix.org/conference/nsdi19/presentation/ousterhout}{Shenango} and achieve low tail latency \& increase CPU efficiency.
                 \item \href{https://github.com/saubhik/caladan/pulls}{\textit{QuicNIC}}: Offloaded GSO \& crypto (encryption, decryption) to a dedicated CPU core to obtain record QUIC throughputs (x5). \textit{Skills}:
@@ -69,21 +130,6 @@
             \begin{itemize}
                 \item Analyze and fix race condition bugs in the Linux kernel 5.4 device drivers based on software verification static analysis tool, \href{https://forge.ispras.ru/projects/klever}{Klever}. Part of \textit{Linux Standards Base} \& \textit{Linux Driver Verification}.
                 \item Accepted \href{https://lore.kernel.org/lkml/?q=saubhik}{patches} to kernel mainline. \textit{Skills}: \href{https://www.kernel.org/}{Linux kernel development}, C.
-            \end{itemize}
-        \end{cvsubsection}
-
-        \begin{cvsubsection}{Lead Software Engineer}{\href{https://www.alpaca.ai}{Alpaca, Tokyo, Japan}}{(2 years) Jan '19 - Jan '21}
-            \begin{itemize}
-                \item Agile team lead of 3 engineers \& Release Manager developing prod systems for delivering JP \& US stock predictions to hedge funds, asset management firms through back-end batch systems \& web-apps.
-                \item Lead dev \& design of full-stack web-service (\href{https://developer.mozilla.org/en-US/docs/Web/JavaScript}{JS}, \href{https://www.python.org/}{Python}, \href{https://flask.palletsprojects.com/}{Flask}, \href{https://www.postgresql.org/}{PostgreSQL}) deployed to prod from scratch withing 3 months; led 10\% annual revenue growth; involved in code reviews, schema design \& prod deploys.
-                \item Dev \& design of prod ML pipeline \& ML model dev for stock price predictions using CNN, NN arch search (\href{https://pytorch.org/}{PyTorch}, \href{https://pandas.pydata.org/}{Pandas}, \href{https://numpy.org/}{NumPy})
-            \end{itemize}
-        \end{cvsubsection}
-
-        \begin{cvsubsection}{Data Scientist}{\href{https://www.ab-inbev.com/}{Anheuser-Busch InBev, Bangalore}}{(1.5 years) Jun '17 - Dec '18}
-            \begin{itemize}
-                \item Developed pricing conjoint modelling pipelines for revenue mgmt across business units with UI dashboards.
-                \item Awarded \textit{Innovation Impact Award} among 200 new hires for developing brand/SKU optimization techniques, aggregating regional conjoint studies; lead 4 data scientists. \textit{Tools}: \href{https://www.r-project.org/about.html}{R}, \href{https://shiny.rstudio.com/}{RShiny}, \href{https://www.python.org/}{Python}, \href{https://jupyter.org/}{Jupyter}.
             \end{itemize}
         \end{cvsubsection}
     \end{cvsection}
