Update ABInBev work experience.

--- a/SaubhikMukherjeeCV.tex
+++ b/SaubhikMukherjeeCV.tex
@@ -2,9 +2,16 @@
 
 \documentclass[]{mcdowellcv}
 
-\name{\href{https://www.linkedin.com/in/saubhikm/}{Saubhik Mukherjee}}
-\address{1735 Woodland Ave, Apt 62 \linebreak East Palo Alto, CA 94303}
-\contacts{Mobile: (470) 313-0534 \linebreak \ULurl{saubhik.mukherjee@gmail.com}}
+\name{
+  \href{https://www.linkedin.com/in/saubhikm/} {Saubhik Mukherjee}
+}
+\address{
+  1735 Woodland Ave, Apt 62 \linebreak East Palo Alto, CA 94303 \linebreak
+  United States
+}
+\contacts{
+  Mobile: (470) 313-0534 \linebreak \ULurl{saubhik.mukherjee@gmail.com}
+}
 
 \begin{document}
     \makeheader
@@ -103,12 +110,42 @@
 
       \begin{cvsubsection}
         {Data Scientist}
-        {\href{https://www.ab-inbev.com/}{Anheuser-Busch InBev, Bangalore}}
-        {Jun '17 - Dec '18}
-        \textit{Pricing Analytics}
+        {\href{https://www.abinbev-india.com/}{Anheuser-Busch InBev, Bangalore}}
+        {Jun 19, 2017 - Dec 28, 2018}
+        \textit{Machine Learning (ML) pricing research}
           \begin{itemize}
-              \item Developed pricing conjoint modelling pipelines for revenue mgmt across business units with UI dashboards.
-              \item Awarded \textit{Innovation Impact Award} among 200 new hires for developing brand/SKU optimization techniques, aggregating regional conjoint studies; lead 4 data scientists. \textit{Tools}: \href{https://www.r-project.org/about.html}{R}, \href{https://shiny.rstudio.com/}{RShiny}, \href{https://www.python.org/}{Python}, \href{https://jupyter.org/}{Jupyter}.
+            \item
+              Develop machine learning models to estimate ABInBev's market
+              share and revenue in different pricing scenarios of beer SKUs
+              across multiple countries, using both
+              \href{https://www.r-project.org/about.html}{R} statistical
+              programming language and \href{https://www.python.org/}{Python}.
+            \item
+              Conduct extensive experiments to determine the significant
+              variables in ML models and create automated scripts to replicate
+              the process, using \href{https://keras.io/}{Keras},
+              \href{https://www.tensorflow.org/}{TensorFlow}.
+            \item
+              Create pricing conjoint survey questionnaires and handle data
+              management and pre-processing using customized scripts and
+              workflows; used \href{https://dplyr.tidyverse.org/}{dplyr},
+              \href{https://tidyr.tidyverse.org/}{tidyr}.
+            \item
+              Interact and collaborate with business heads in different
+              countries to include different pricing scenarios in conjoint
+              based on the business requirements and present the pricing
+              analysis results for business actions; used
+              \href{https://ggplot2.tidyverse.org/}{ggplot2}.
+            \item
+              Develop various optimization algorithms based on pricing analysis
+              results to maximize the business objective, such as market share
+              or revenue; used
+              \href{https://cran.r-project.org/web/packages/nloptr/}{nloptr}.
+            \item
+              Create UI dashboards that display conjoint analysis results for
+              business to gain actionable insights, using
+              \href{https://shiny.rstudio.com/}{Shiny},
+              \href{https://posit.co/}{RStudio}.
           \end{itemize}
       \end{cvsubsection}
     \end{cvsection}
