Update constants for widths & spaces.

--- a/SaubhikMukherjeeCV.tex
+++ b/SaubhikMukherjeeCV.tex
@@ -14,201 +14,181 @@
 }
 
 \begin{document}
-    \makeheader
+  \makeheader
 
-    \begin{cvsection}{Employment}
-      \begin{cvsubsection}
-        {Senior Software Engineer}
-        {\href{https://sambanova.ai/}{SambaNova Systems, Palo Alto}}
-        {May 23, 2022 - Present}
-          \textit{Machine Learning (ML) compiler}
-          \begin{itemize}
-            \item
-              Build \href{https://mlir.llvm.org/}{MLIR} and
-              \href{https://llvm.org/}{LLVM}-based compiler layers and
-              compiler tools to transform, optimize, debug, and execute ML
-              models on proprietary ML accelerator architectures.
-            \item
-              Build scalable and high-quality production compiler
-              infrastructure using well-established and emerging techniques
-              and push the boundaries of compiler design.
-            \item
-              Develop, maintain, and debug compiler optimization algorithms
-              on ML graphs and add compiler support for new hardware
-              architectures.
-            \item
-              Analyze and improve compile-time and run-time performance
-              across multiple AI hardware architectures and ML frameworks,
-              such as \href{https://www.tensorflow.org/}{TensorFlow} and
-              \href{https://pytorch.org/}{PyTorch}, to support new
-              state-of-the-art training and inference.
-            \item
-              Collaborate with ML researchers and engineers to guide compiler
-              development for future ML trends.
-            \item
-              \textit{Tools}: \href{https://isocpp.org/}{C++},
-              \href{https://clang.llvm.org/}{Clang},
-              \href{https://mlir.llvm.org/}{MLIR},
-              \href{https://lldb.llvm.org/}{LLDB},
-              \href{https://cmake.org/}{cmake},
-              \href{https://ninja-build.org/}{ninja},
-              \href{https://gperftools.github.io/gperftools/cpuprofile.html}{gperf},
-              \href{https://github.com/tmux/tmux}{tmux},
-              \href{https://neovim.io/}{neovim},
-              \href{https://github.com/universal-ctags/ctags}{ctags},
-              \href{https://clangd.llvm.org/}{clangd},
-              \href{https://www.synopsys.com/verification/simulation/vcs.html}{Synopsys
-              VCS}.
-          \end{itemize}
-      \end{cvsubsection}
+  \begin{cvsection}{Employment}
+    \begin{cvsubsection}
+      {Senior Software Engineer \linebreak \textit{Machine Learning (ML) compiler}}
+      {\href{https://sambanova.ai/}{SambaNova Systems, Inc. \linebreak Palo Alto, CA, USA}}
+      {May 23, 2022 - Present}
+        \begin{itemize}
+          \item
+            Build \href{https://mlir.llvm.org/}{MLIR} and
+            \href{https://llvm.org/}{LLVM}-based compiler layers and
+            compiler tools to transform, optimize, debug, and execute ML
+            models on proprietary ML accelerator architectures.
+          \item
+            Build scalable and high-quality production compiler
+            infrastructure using well-established and emerging techniques
+            and push the boundaries of compiler design.
+          \item
+            Develop, maintain, and debug compiler optimization algorithms
+            on ML graphs and add compiler support for new hardware
+            architectures.
+          \item
+            Analyze and improve compile-time and run-time performance
+            across multiple AI hardware architectures and ML frameworks,
+            such as \href{https://www.tensorflow.org/}{TensorFlow} and
+            \href{https://pytorch.org/}{PyTorch}, to support new
+            state-of-the-art training and inference.
+          \item
+            Collaborate with ML researchers and engineers to guide compiler
+            development for future ML trends.
+          \item
+            \textit{Tools}: \href{https://isocpp.org/}{C++},
+            \href{https://clang.llvm.org/}{Clang},
+            \href{https://mlir.llvm.org/}{MLIR},
+            \href{https://lldb.llvm.org/}{LLDB},
+            \href{https://cmake.org/}{cmake},
+            \href{https://ninja-build.org/}{ninja},
+            \href{https://gperftools.github.io/gperftools/cpuprofile.html}{gperf},
+            \href{https://github.com/tmux/tmux}{tmux},
+            \href{https://neovim.io/}{neovim},
+            \href{https://github.com/universal-ctags/ctags}{ctags},
+            \href{https://clangd.llvm.org/}{clangd},
+            \href{https://www.synopsys.com/verification/simulation/vcs.html}{Synopsys
+            VCS}.
+        \end{itemize}
+    \end{cvsubsection}
 
-      \begin{cvsubsection}
-        {Software Engineer}
-        {\href{https://www.alpaca.markets/jp/about.html}{AlpacaJapan, Tokyo}}
-        {Jan 1, 2019 - Jan 8, 2021}
-        \textit{Machine Learning (ML) systems}
-          \begin{itemize}
-            \item
-              Design, develop, maintain, and test live production software
-              systems for delivering stock price predictions.
-            \item
-              Collaborate with data science \& engineering team to integrate
-              different software systems and deploy and upgrade ML models in
-              live production financial forecasting software.
-            \item
-              Handle installation \& maintenance of new data sources and
-              develop the data platform used for ML model R\&D.
-            \item
-              Collect and document client requirements for future releases and
-              make extensible and robust software design decisions for
-              developing server \& client web applications; responsible for
-              10\% annual revenue growth.
-            \item
-              Manage software releases with an agile mindset and develop
-              workflows for fast production recovery in case of failures.
-            \item
-              Driving innovation by evaluating new technologies, original
-              financial data sources, and recent research papers that add value
-              to Alpaca's products.
-            \item
-              \textit{Tools}: \href{https://www.python.org/}{Python},
-              \href{https://react.dev/}{React},
-              \href{https://developer.mozilla.org/en-US/docs/Web/JavaScript}{JavaScript},
-              \href{https://flask.palletsprojects.com/}{Flask},
-              \href{https://www.postgresql.org/}{PostgreSQL},
-              \href{https://www.sqlalchemy.org/}{SQLAlchemy},
-              \href{https://alembic.sqlalchemy.org/en/latest/}{Alembic},
-              \href{https://kubernetes.io/}{Kubernetes},
-              \href{https://www.docker.com/}{Docker},
-              \href{https://pytorch.org/}{PyTorch},
-              \href{https://pandas.pydata.org/}{Pandas},
-              \href{https://numpy.org/}{NumPy},
-              \href{https://scipy.org/}{SciPy},
-              \href{https://github.com/spotify/luigi}{Luigi}.
-          \end{itemize}
-      \end{cvsubsection}
+    \begin{cvsubsection}
+      {Software Engineer \linebreak \textit{Machine Learning (ML) systems}}
+      {\href{https://www.alpaca.markets/jp/about.html}{AlpacaJapan, Co. Ltd. \linebreak Tokyo, Japan}}
+      {Jan 1, 2019 - Jan 8, 2021}
+        \begin{itemize}
+          \item
+            Design, develop, maintain, and test live production software
+            systems for delivering stock price predictions.
+          \item
+            Collaborate with data science \& engineering team to integrate
+            different software systems and deploy and upgrade ML models in
+            live production financial forecasting software.
+          \item
+            Handle installation \& maintenance of new data sources and
+            develop the data platform used for ML model R\&D.
+          \item
+            Collect and document client requirements for future releases and
+            make extensible and robust software design decisions for
+            developing server \& client web applications; responsible for
+            10\% annual revenue growth.
+          \item
+            Manage software releases with an agile mindset and develop
+            workflows for fast production recovery in case of failures.
+          \item
+            Driving innovation by evaluating new technologies, original
+            financial data sources, and recent research papers that add value
+            to Alpaca's products.
+          \item
+            \textit{Tools}: \href{https://www.python.org/}{Python},
+            \href{https://react.dev/}{React},
+            \href{https://developer.mozilla.org/en-US/docs/Web/JavaScript}{JavaScript},
+            \href{https://flask.palletsprojects.com/}{Flask},
+            \href{https://www.postgresql.org/}{PostgreSQL},
+            \href{https://www.sqlalchemy.org/}{SQLAlchemy},
+            \href{https://alembic.sqlalchemy.org/en/latest/}{Alembic},
+            \href{https://kubernetes.io/}{Kubernetes},
+            \href{https://www.docker.com/}{Docker},
+            \href{https://pytorch.org/}{PyTorch},
+            \href{https://pandas.pydata.org/}{Pandas},
+            \href{https://numpy.org/}{NumPy}, \href{https://scipy.org/}{SciPy},
+            \href{https://github.com/spotify/luigi}{Luigi},
+            \href{https://circleci.com/}{CircleCI},
+            \href{https://argoproj.github.io/cd/}{Argo CD},
+            \href{https://auth0.com/}{Auth0},
+            \href{https://www.datadoghq.com/}{Datadog}.
+        \end{itemize}
+    \end{cvsubsection}
 
-      \begin{cvsubsection}
-        {Data Scientist}
-        {\href{https://www.abinbev-india.com/}{Anheuser-Busch InBev, Bangalore}}
-        {Jun 19, 2017 - Dec 28, 2018}
-        \textit{Machine Learning (ML) pricing research}
-          \begin{itemize}
-            \item
-              Develop machine learning models to estimate ABInBev's market
-              share and revenue in different pricing scenarios of beer SKUs
-              across multiple countries, using both
-              \href{https://www.r-project.org/about.html}{R} statistical
-              programming language and \href{https://www.python.org/}{Python}.
-            \item
-              Conduct extensive experiments to determine the significant
-              variables in ML models and create automated scripts to replicate
-              the process, using \href{https://keras.io/}{Keras},
-              \href{https://www.tensorflow.org/}{TensorFlow}.
-            \item
-              Create pricing conjoint survey questionnaires and handle data
-              management and pre-processing using customized scripts and
-              workflows; used \href{https://dplyr.tidyverse.org/}{dplyr},
-              \href{https://tidyr.tidyverse.org/}{tidyr}.
-            \item
-              Interact and collaborate with business heads in different
-              countries to include different pricing scenarios in conjoint
-              based on the business requirements and present the pricing
-              analysis results for business actions; used
-              \href{https://ggplot2.tidyverse.org/}{ggplot2}.
-            \item
-              Develop various optimization algorithms based on pricing analysis
-              results to maximize the business objective, such as market share
-              or revenue; used
-              \href{https://cran.r-project.org/web/packages/nloptr/}{nloptr}.
-            \item
-              Create UI dashboards that display conjoint analysis results for
-              business to gain actionable insights, using
-              \href{https://shiny.rstudio.com/}{Shiny},
-              \href{https://posit.co/}{RStudio}.
-          \end{itemize}
-      \end{cvsubsection}
-    \end{cvsection}
+    \begin{cvsubsection}
+      {Data Scientist \linebreak \textit{ML in pricing research}}
+      {\href{https://www.abinbev-india.com/}{Anheuser-Busch InBev \linebreak Bangalore, India}}
+      {Jun 19, 2017 - Dec 28, 2018}
+        \begin{itemize}
+          \item
+            Develop machine learning models to estimate ABInBev's market
+            share and revenue in different pricing scenarios of beer SKUs
+            across multiple countries, using both
+            \href{https://www.r-project.org/about.html}{R} statistical
+            programming language and \href{https://www.python.org/}{Python}.
+          \item
+            Conduct extensive experiments to determine the significant
+            variables in ML models and create automated scripts to replicate
+            the process, using \href{https://keras.io/}{Keras},
+            \href{https://www.tensorflow.org/}{TensorFlow}.
+          \item
+            Create pricing conjoint survey questionnaires and handle data
+            management and pre-processing using customized scripts and
+            workflows; used \href{https://dplyr.tidyverse.org/}{dplyr},
+            \href{https://tidyr.tidyverse.org/}{tidyr}.
+          \item
+            Interact and collaborate with business heads in different
+            countries to include different pricing scenarios in conjoint
+            based on the business requirements and present the pricing
+            analysis results for business actions; used
+            \href{https://ggplot2.tidyverse.org/}{ggplot2}.
+          \item
+            Develop various optimization algorithms based on pricing analysis
+            results to maximize the business objective, such as market share
+            or revenue; used
+            \href{https://cran.r-project.org/web/packages/nloptr/}{nloptr}.
+          \item
+            Create UI dashboards that display conjoint analysis results for
+            business to gain actionable insights, using
+            \href{https://shiny.rstudio.com/}{Shiny},
+            \href{https://posit.co/}{RStudio}.
+        \end{itemize}
+    \end{cvsubsection}
+  \end{cvsection}
 
-    \begin{cvsection}{Internships \& Research}
-        \begin{cvsubsection}
-          {Graduate Research Assistant}
-          {\href{https://scs.gatech.edu/}{Georgia Tech, Atlanta}}
-          {Aug 2021 - May 2022}
-            \begin{itemize}
-                \item Ported Facebook's QUIC implementation, \href{https://github.com/facebookincubator/mvfst}{mvfst}, to rely on the efficient kernel-bypass network stack (threading \& socket) APIs provided by MIT's \href{https://www.usenix.org/conference/nsdi19/presentation/ousterhout}{Shenango} and achieve low tail latency \& increase CPU efficiency.
-                \item \href{https://github.com/saubhik/caladan/pulls}{\textit{QuicNIC}}: Offloaded GSO \& crypto (encryption, decryption) to a dedicated CPU core to obtain record QUIC throughputs (x5). \textit{Skills}:
-                \href{https://quicwg.org/}{QUIC},
-                \href{https://github.com/shenango/caladan}{caladan}, \href{https://github.com/facebookincubator/mvfst}{mvfst}, \href{https://github.com/facebook/folly}{folly}, \href{https://github.com/facebookincubator/fizz}{fizz}, profiling prod C++ codebase, \href{https://www.brendangregg.com/FlameGraphs/cpuflamegraphs.html}{CPU FlameGraphs}.
-            \end{itemize}
-        \end{cvsubsection}
+  \begin{cvsection}{Internships \& Research}
+    \begin{cvsubsection}
+      {Graduate Research Assistant}
+      {\href{https://scs.gatech.edu/}{Georgia Tech, Atlanta}}
+      {Aug 2021 - May 2022}
+        \begin{itemize}
+            \item Ported Facebook's QUIC implementation, \href{https://github.com/facebookincubator/mvfst}{mvfst}, to rely on the efficient kernel-bypass network stack (threading \& socket) APIs provided by MIT's \href{https://www.usenix.org/conference/nsdi19/presentation/ousterhout}{Shenango} and achieve low tail latency \& increase CPU efficiency.
+            \item \href{https://github.com/saubhik/caladan/pulls}{\textit{QuicNIC}}: Offloaded GSO \& crypto (encryption, decryption) to a dedicated CPU core to obtain record QUIC throughputs (x5). \textit{Skills}:
+            \href{https://quicwg.org/}{QUIC},
+            \href{https://github.com/shenango/caladan}{caladan}, \href{https://github.com/facebookincubator/mvfst}{mvfst}, \href{https://github.com/facebook/folly}{folly}, \href{https://github.com/facebookincubator/fizz}{fizz}, profiling prod C++ codebase, \href{https://www.brendangregg.com/FlameGraphs/cpuflamegraphs.html}{CPU FlameGraphs}.
+        \end{itemize}
+    \end{cvsubsection}
 
-        \begin{cvsubsection}{Linux Contributor, Intern}{\href{https://summerofcode.withgoogle.com/archive/2021/projects/4818588170452992}{Google Summer of Code}}{May '21 - Aug '21}
-            \begin{itemize}
-                \item Analyze and fix race condition bugs in the Linux kernel 5.4 device drivers based on software verification static analysis tool, \href{https://forge.ispras.ru/projects/klever}{Klever}. Part of \textit{Linux Standards Base} \& \textit{Linux Driver Verification}.
-                \item Accepted \href{https://lore.kernel.org/lkml/?q=saubhik}{patches} to kernel mainline. \textit{Skills}: \href{https://www.kernel.org/}{Linux kernel development}, C.
-            \end{itemize}
-        \end{cvsubsection}
-    \end{cvsection}
+    \begin{cvsubsection}{Linux Contributor, Intern}{\href{https://summerofcode.withgoogle.com/archive/2021/projects/4818588170452992}{Google Summer of Code}}{May '21 - Aug '21}
+        \begin{itemize}
+            \item Analyze and fix race condition bugs in the Linux kernel 5.4 device drivers based on software verification static analysis tool, \href{https://forge.ispras.ru/projects/klever}{Klever}. Part of \textit{Linux Standards Base} \& \textit{Linux Driver Verification}.
+            \item Accepted \href{https://lore.kernel.org/lkml/?q=saubhik}{patches} to kernel mainline. \textit{Skills}: \href{https://www.kernel.org/}{Linux kernel development}, C.
+        \end{itemize}
+    \end{cvsubsection}
+  \end{cvsection}
 
-    \begin{cvsection}{Education}
-        \begin{cvsubsection}{Atlanta, GA}{\href{https://www.gatech.edu/}{Georgia Institute of Technology}}{Jan '20 - May '22}
-            \begin{itemize}
-                \item \textbf{Master of Science in Computer Science} with \textit{Systems Specialization}, May 2022. \textbf{GPA: 4.0}
-                \item \textit{Courses}: Operating Systems; Computer Architecture; Compilers; Networks; Distributed Systems; Databases; HPC; Algorithms.
-            \end{itemize}
-        \end{cvsubsection}
-        \begin{cvsubsection}{Kolkata, IN}{\href{https://www.isical.ac.in/}{Indian Statistical Institute}}{Jul '15 - Jun '17}
-            \begin{itemize}
-                \item \textbf{Master of Science in Quantitative Economics}; full scholarship \& monthly stipends
-                \item \textit{Relevant Courses}: Optimization; Game Theory; ACM-ICPC regional qualifier.
-            \end{itemize}
-        \end{cvsubsection}
-        \begin{cvsubsection}{Chennai, IN}{\href{https://www.cmi.ac.in/}{Chennai Mathematical Institute}}{Aug '12 - Apr '15}
-            \begin{itemize}
-                \item \textbf{Bachelor of Science in Mathematics and Computer Science}, \href{https://www.online-inspire.gov.in/}{Innovation in Science Pursuit Scholar}
-                \item \textit{Courses}: Algorithms; Programming Languages; Discrete Math; Theory of Computation; Logic.
-            \end{itemize}
-        \end{cvsubsection}
-    \end{cvsection}
-
-    \begin{cvsection}{Projects}
-        \begin{cvsubsection}{}{}{}
-            \begin{itemize}
-                \item \href{https://github.com/saubhik/thread-scheduler}{\textit{Xen's Credit Scheduler}} Credit scheduler C implementation in a user-level threads library.
-                \item \href{https://github.com/saubhik/tinyfile}{\textit{TinyFile}} Shared memory-based file compression service with client library in C.
-                \item \href{https://github.com/saubhik/GTStore}{\textit{Distributed KVS}} Distributed key-value store using XML-RPC with partitioning, replication \& consistency.
-            \end{itemize}
-        \end{cvsubsection}{}{}{}
-    \end{cvsection}
-
-    \begin{cvsection}{Languages and Technologies}
-        \begin{cvsubsection}{}{}{}
-            \begin{itemize}
-                \item \textbf{About 10k lines}: C++, Python, C, Java; \textbf{About 500 lines}: JS, HTML, CSS
-                \item Linux, git, tmux, vim, ctags, LSPs (clangd), docker, k8s, AWS, Auth0, CircleCI, DataDog, ArgoCD
-            \end{itemize}
-        \end{cvsubsection}
-    \end{cvsection}
-
+  \begin{cvsection}{Education}
+    \begin{cvsubsection}{Atlanta, GA}{\href{https://www.gatech.edu/}{Georgia Institute of Technology}}{Jan '20 - May '22}
+      \begin{itemize}
+        \item \textbf{Master of Science in Computer Science} with \textit{Systems Specialization}, May 2022. \textbf{GPA: 4.0}
+        \item \textit{Courses}: Operating Systems; Computer Architecture; Compilers; Networks; Distributed Systems; Databases; HPC; Algorithms.
+      \end{itemize}
+    \end{cvsubsection}
+    \begin{cvsubsection}{Kolkata, IN}{\href{https://www.isical.ac.in/}{Indian Statistical Institute}}{Jul '15 - Jun '17}
+      \begin{itemize}
+        \item \textbf{Master of Science in Quantitative Economics}; full scholarship \& monthly stipends
+        \item \textit{Relevant Courses}: Optimization; Game Theory.
+      \end{itemize}
+    \end{cvsubsection}
+    \begin{cvsubsection}{Chennai, IN}{\href{https://www.cmi.ac.in/}{Chennai Mathematical Institute}}{Aug '12 - Apr '15}
+      \begin{itemize}
+        \item \textbf{Bachelor of Science in Mathematics and Computer Science}, \href{https://www.online-inspire.gov.in/}{Innovation in Science Pursuit Scholar}
+        \item \textit{Courses}: Algorithms; Programming Languages; Discrete Math; Theory of Computation; Logic.
+      \end{itemize}
+    \end{cvsubsection}
+  \end{cvsection}
 \end{document}
